Update noturno 23/02.2 porque eu achei legal adicionar detalhe de contato

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -52,10 +52,10 @@
   		  		<p id="bot-text">INFORMAÇÕES GERAIS DE CONTATO</p>
   		  	</div>
   		  	<div>
-  		  	<a href="https://www.whatsapp.com/">
+  		  	<a href="https://wa.me/5565996248667" target="_blank">
 	  		  	<input type="image" src="https://cdn-icons-png.flaticon.com/512/739/739247.png" id="bt-social" >	
 	  		</a>
-  		  	<a href="https://br.linkedin.com">
+  		  	<a href="https://www.linkedin.com/in/breno-da-silva-nogueira-383063176/" target="_blank">
 	  		  	<input type="image" src="https://cdn-icons-png.flaticon.com/512/1384/1384088.png" id="bt-social">	
 	  		</a>
 
