--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -32,6 +32,19 @@ body {
     margin: 0 !important;
 }
 
+.sticky-top {
+	background-color: rgb(92, 92, 92);
+    transition: 0.1s;
+    transition-duration: 0.3s;
+}
+
+.btn-md {
+    --bs-btn-padding-y: 0.5rem !important;
+    --bs-btn-padding-x: 1.5rem !important;
+    --bs-btn-font-size: 1rem !important;
+    margin: 0% 1%;
+}
+
 #show-button-div {
 
     text-align: center;
@@ -59,79 +72,13 @@ body {
 
 
 }
-
-#menu  {
-    text-decoration: none;
-  }
- 
-  nav {
-    font-family: monospace;
-  }
   
-  ul li {
-    background: rgba(211, 209, 206, 0.459);
-    list-style: none;
-    margin: 0;
-    border-radius: 25px;
-    max-width: 120px;
-    text-align: center;
-  }
-  li {
-    color: rgb(255, 255, 255);
-    display: block;
-    position: relative;
-    text-decoration: none;
-    transition-duration: 0.5s;
-  }
-
-  li a {
-    color: rgb(255, 255, 255);
-  }
-  
-  li:hover,
-  li:focus-within {
-    background: rgb(92, 90, 90);
-    cursor: pointer;
-  }
-  
-  li:focus-within a {
-    outline: none;
-  }
-  
-  ul li ul {
-    background: rgb(201, 200, 199);
-    visibility: hidden;
-    opacity: 0;
-    min-width: 5rem;
-    position: absolute;
-    transition: all 0.5s ease;
-    margin-top: 1rem;
-    left: 0;
-    display: none;
-
-  }
-  
-  ul li:hover > ul,
-  ul li:focus-within > ul,
-  ul li ul:hover,
-  ul li ul:focus {
-     visibility: visible;
-     opacity: 1;
-     display: block;
-  }
-  
-  ul li ul li {
-    clear: both;
-    width: 100%;
-  }
-   /*
-*/
-  
-#tl-principal {
+.content-div {
 	background-color: rgb(255,255,255, 0.5);
 	border-radius: 15px;
 	height: auto;
 	width: 100%;
+    padding: 1%;
 
 }
 
@@ -143,17 +90,17 @@ body {
         font-family: Impact;
         color: rgb(0, 0, 0);
         -webkit-text-stroke-width: 0.1px;
-        -webkit-text-stroke-color: rgb(255, 255, 255);
+        -webkit-text-stroke-color: rgb(255, 255, 255,0.7);
     
 
 }
 
-#tl-skillstitle{
+.tl-skillstitle{
     font-family: Impact ;
     -webkit-text-stroke-width: 0.1px;
     -webkit-text-stroke-color: rgb(255, 255, 255);
     border: 0;
-    
+    text-align-last: center;
 
 }
 
@@ -183,8 +130,8 @@ body {
     text-align: -webkit-center;
 }
 
-.mySlidesSkills{
-    width: 300px;
+/*.mySlidesSkills{
+    width: 150px;
     display: none;
     max-width: 100%;
     background-position: center center;
@@ -195,17 +142,26 @@ body {
 }
 
 .mySlidesCerts {
-    width: 400px;
+    width: 350px;
     display: none;
     max-width: 100%;
     background-position: center center;
     background-repeat: no-repeat;
     border-radius: 15px;
-    padding: 2em;
+    padding: 0.5em 2em 2em;
 
+} */
+
+.slides-shadow {
+    box-shadow: 0 1rem 5rem rgba(0,0,0,0.35)!important;
 }
-#slide1{
-	display: flex;
+.slide-shadow-p{
+    padding: 0 !important;
+    background: linear-gradient(180deg, rgba(150,150,150,0.4) 10%, rgba(150,150,150,0.9) 100%);
+    border-radius: 15px;
+}
+.slide{
+    text-align: -webkit-center;
 }
 
 #bot-principal {
@@ -218,6 +174,22 @@ body {
     text-align: center;
 
 
+}
+
+.card-exp{
+
+    max-width: 540px;
+    padding: 1%;
+
+}
+
+.logo-exp {
+    align-self: center;
+    padding: 5%;
+}
+
+.card-text{
+    margin-bottom: 1em !important;
 }
 
  #bt-social {
@@ -255,6 +227,11 @@ body {
 
     }
 
+    .btn-md {
+        --bs-btn-padding-y: .25rem !important; 
+        --bs-btn-padding-x: .5rem !important; 
+        --bs-btn-font-size: .75rem !important;
+    }
 
     #tl-text {
 
@@ -268,10 +245,9 @@ body {
       padding: 10px;
 
         }
-    .row{
-        display: grid !important;
-
-
+    .rows{
+        padding-left: 0 !important;
+        padding-right: 0 !important;
     }
     .col-5 {
         width: 70% !important;
@@ -283,6 +259,16 @@ body {
         max-width: 70% !important;
     }
 
-    
+    .logo-exp{
+        max-width: 33% !important;
+    }
+    .card-exp{
+        margin: 5%;
+    }
+    .dados-exp{
+        width: 67% !important;
+        font-size: 60%;
+        text-align: center;
+    }
 
 }
