--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,26 @@
-  	<header class="hidden-objects">
+  	<header id = "header-bar" class="hidden-objects " >
   		<div id="aba-topo">	
   				<p id="portfolio-topo"> PORTFÓLIO</p>
 		   <nav role="navigation" id="navbar-topo">
-			<button type="button" class="btn btn-outline-light btn-sm" >INICIO</button>
-			<button type="button" class="btn btn-outline-light btn-sm" >SOBRE</button>
-			<button type="button" class="btn btn-outline-light btn-sm" >PROJETOS</button>
-			<button type="button" class="btn btn-outline-light btn-sm" >CONTATO</button>
+			<button type="button" class="btn btn-outline-light btn-md" >INICIO</button>
+			<button type="button" class="btn btn-outline-light btn-md" >SOBRE</button>
+			<button type="button" class="btn btn-outline-light btn-md" >PROJETOS</button>
+			<button type="button" class="btn btn-outline-light btn-md" >CONTATO</button>
 			</nav>
         </div>
+		<script>  window.addEventListener('scroll',() => {
+  
+    var navbar = document.getElementById('header-bar');
+    const scrolled = window.scrollY;
+    
+    if (scrolled >= 20){
+      navbar.classList.add ('sticky-top');
+  
+    }else {
+      navbar.classList.remove ('sticky-top');
+  
+    }
+  
+  
+   });</script>
   	</header>
