--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="hidden-objects content-box content-div">
+<footer class="content-box content-div">
    <div id="bot-principal">
       <div id="bot-conteudo">
          <p id="bot-text">INFORMAÇÕES GERAIS DE CONTATO</p>
