--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,8 +4,8 @@
 		   <nav role="navigation" id="navbar-topo">
 			<%= link_to "INICIO", root_path, :class =>"btn btn-outline-light btn-md" %> 
 			<%= link_to "SOBRE", pages_about_path, :class =>"btn btn-outline-light btn-md" %> 
-			<%= link_to "PROJETOS", pages_contacts_path, :class =>"btn btn-outline-light btn-md" %> 
-			<%= link_to "CONTATO", pages_projects_path, :class =>"btn btn-outline-light btn-md" %> 
+			<%= link_to "PROJETOS", pages_projects_path, :class =>"btn btn-outline-light btn-md" %> 
+			<%= link_to "CONTATO", pages_contacts_path, :class =>"btn btn-outline-light btn-md" %> 
 			</nav>
         </div>
 		<script>  window.addEventListener('scroll',() => {
