--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -7,7 +7,7 @@
     place-items: center;
 }
 .tl-title{
-    font-size: 50px;
+    font-size: min(max(25px,5vw),50px);
     color: rgb(0, 0, 0);
     position: relative;
     margin-bottom: 80px;
