--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -106,7 +106,7 @@
    </div>
 </section>
 <section class="hidden-objects content-box content-div">
-   <h3 class="title-exp">Expêriencias com Desenvolvimento</h3>
+   <h3 class="title-exp">EXPERIÊNCIAS COM DESENVOLVIMENTO</h3>
    <div>
       <div class="card row mb-3 card-exp">
          <div class="col inner-card-exp">
