--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,7 @@
       <div class = "col-5">
          <p id="tl-text" class = "lh-1"> Neste Portfólio apresento mais sobre mim,<br>Breno da Silva Nogueira.<br><br>
             Busco mostrar com transparencia minhas habilidades atuais em desenvolvimento seja back ou front-end,
-            também demonstrar capacidade de organização e clareza com um template simples, moderno e fácil de ler.
+            também demonstrar capacidade de organização e clareza com um template simples, moderno e com fácil leitura.
          </p>
       </div >
       <div class = "col-3" >
