--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -23,6 +23,7 @@
     transform: translateX(-50%);
 }
 
+
 .tlContainer{
     width: 70%;
     height: auto;
@@ -74,10 +75,8 @@
 }
 .tl-ul .tl-li p{
     font-size: 20px;
-    color: rgb(70, 70, 70);
+    color: rgb(50, 50, 50);
     margin: 7px 0;
-    -webkit-text-stroke-width: 0.1px;
-    -webkit-text-stroke-color: rgb(0, 0, 0);
 }
 
 .tl-ul .tl-li .date{
@@ -131,6 +130,15 @@
 }
 .spinner-border , .spinner-grow {
     border-radius: 5px !important;
+}
+
+.tl-cardtitle{
+    font-family: Impact ;
+    -webkit-text-stroke-width: 0.1px;
+    -webkit-text-stroke-color: rgb(255, 255, 255);
+    margin-bottom: 0;
+    text-align-last: center;
+
 }
 
 
