--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,48 +1,5 @@
 
 
-* {
-	margin-bottom: 5px;
-    font-family: Impact;
-}
-
-:root {
-    --bs-body-bg : rgb(150, 150, 150) !important;
-}
-
-
-body {
-	margin: 0px 5px !important;
-	padding: 0px 5px !important;
-}
-
-
-
-#aba-topo {
-	background-color: rgba(0,0,0, 0.8);
-    height: fit-content;
-    object-position: 5px 10%;
-    text-align: center;
-    border-radius: 0px 0px 15px 15px;
-    width : 100%;
-    padding-bottom: 0.5em;
-
-}
-#portfolio-topo {
-    text-align: center;
-    font-size: 4em;
-    font-family: Impact;
-    color: rgba(255, 255, 255, 0);
-    margin: 0 !important;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #f8f9fa;
-}
-
-.sticky-top {
-	background-color: rgb(150, 150, 150) ;
-    transition: 0.1s;
-    transition-duration: 0.3s;
-}
-
 .btn-md {
     --bs-btn-padding-y: 0.5rem !important;
     --bs-btn-padding-x: 1.5rem !important;
@@ -50,19 +7,7 @@ body {
     margin: 0% 1%;
 }
 
-#show-button-div {
 
-    text-align: center;
-    animation: 1s !important;
-    margin-top: 20%;
-
-}
-
-.hidden-objects{
-    
-   animation: 2s linear fadein;
-  
-}
 
 @keyframes fadein {
     from { opacity: 0; }
@@ -78,7 +23,7 @@ body {
 
 }
 
-#tl-text {
+#present-text {
         font-size: 1.5em;
 	    text-size-adjust: auto;
 	    margin : 5px;
@@ -91,27 +36,7 @@ body {
 
 }
 
-.tl-skillstitle{
-    font-family: Impact ;
-    -webkit-text-stroke-width: 0.1px;
-    -webkit-text-stroke-color: rgb(255, 255, 255);
-    margin-bottom: 0;
-    text-align-last: center;
-
-}
-
-#img-principal {
-    inline-size: -webkit-fill-available;
-    max-width: 500px;
-    border-radius: 15px;
-    margin: 5px;
-    min-width: 150px;
-    align-content: center;
-}
-
-
-
-#tl-conteudo {
+#present-content {
 
     padding: 15px;
     place-items: center;
@@ -121,7 +46,7 @@ body {
 }
 
 
-#tl-slide {
+#all-slide {
 	padding: 0px 15px;
     text-align: -webkit-center;
 }
@@ -161,7 +86,7 @@ body {
 }
 .card-exp{
 
-    max-width: 66%;
+    max-width: 100%;
     padding: 0% 1%;
     display: flex !important;
     flex-direction: row !important;
@@ -189,17 +114,6 @@ body {
     border: transparent !important;
 }
 
- #bt-social {
-
- 	width: 50px;
- 	height: 50px;
- 	
- }
-
- .links-contact{
-    text-decoration: none;
-
-}
 
  label{
 	border-radius: 10px;
@@ -208,40 +122,22 @@ body {
 
 
 
-
 @media only screen and (max-width: 600px) {
 
-    
-    #welcome {
-        font-size: xx-large;
-    }
-    #show-button{
-        background: url("https://cdn-icons-png.flaticon.com/512/6692/6692271.png") center / 80px 80px no-repeat; 
-        height: 100px;
-        width: 100px;
-        border-radius: 50px;
-        content-visibility: hidden;
-
-    }
-
+ 
     .btn-md {
         --bs-btn-padding-y: .25rem !important; 
         --bs-btn-padding-x: .5rem !important; 
         --bs-btn-font-size: .75rem !important;
     }
 
-    #tl-text {
+    #present-text {
 
         margin: 20px;
         font-size: 0.8em;
 
     }
 
-    #img-principal{
-      /*  max-width: 80%; */
-      padding: 10px;
-
-        }
     .rows{
         padding-left: 0 !important;
         padding-right: 0 !important;
@@ -263,7 +159,7 @@ body {
     .title-exp{
         margin-bottom: -8px;
     }
-    .tl-skillstitle,.title-exp{
+    .tl-cardtitle,.title-exp{
         margin-top: 5px;
 
     }
