--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,7 @@
   	<header id = "header-bar"  >
   		<div id="aba-topo">	
-  				<p id="portfolio-topo"> PORTFÓLIO</p>
+  				<p id="portfolio-h1"> PORTFÓLIO</p>
+				<p id="portfolio-h2"> BRENO DA SILVA NOGUEIRA</p>
 		   <nav role="navigation" id="navbar-topo">
 			<%= link_to "INICIO", root_path, :class =>"btn btn-outline-light btn-md" %> 
 			<%= link_to "SOBRE", pages_about_path, :class =>"btn btn-outline-light btn-md" %> 
