--- a/app/views/pages/contacts.html.erb
+++ b/app/views/pages/contacts.html.erb
@@ -29,24 +29,24 @@
 
     <%= form_for Contact.new do |f| %>
             <%= f.label :name ,'NOME', class: "form-label form-texto" %><br>
-            <%= f.text_field :name, required: true , class:"form-control"  %>
+            <%= f.text_field :name, required: true , class:"form-control",disabled: true %>
 
             <br>
 
             <%= f.label :email ,'E-MAIL', class: "form-label form-texto"  %><br>
-            <%= f.email_field :email, placeholder: 'nick@exemplo.com' , required: true , class:"form-control" %>
+            <%= f.email_field :email, placeholder: 'nick@exemplo.com' , required: true , class:"form-control" , disabled: true %>
 
             <br>
 
             <%= f.label :message ,'MENSAGEM', class: "form-label form-texto"  %><br>
-            <%= f.text_area :message, as: :text , class:"form-control form-message" %><br>
+            <%= f.text_area :message, as: :text ,placeholder: 'EM DESENVOLVIMENTO', class:"form-control form-message",disabled: true %><br>
 
             <div id="hidden-captcha">
                 <%= f.label :nickname %><br>
-                <%= f.text_field :nickname, hint: 'leave this field blank' %>
+                <%= f.text_field :nickname, hint: 'leave this field blank'%>
             </div>
 
-            <%= f.submit 'ENVIAR', class: "btn btn-dark send-button" %>
+            <%= f.submit 'ENVIAR', class: "btn btn-dark send-button" ,disabled: true  %>
      <% end %>
 </div>
 </section>
