--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,10 +1,11 @@
 
-<section id="tl-principal"  class="hidden-objects content-box content-div" >
-   <div class="row" id="tl-conteudo">
+<section id="present-div"  class="hidden-objects content-box content-div" >
+   <div class="row" id="present-content">
       <div class = "col-5">
-         <p id="tl-text" class = "lh-1"> Neste Portfólio apresento mais sobre mim,<br>Breno da Silva Nogueira.<br><br>
+         <p id="present-text" class = "lh-1"> Neste Portfólio apresento mais sobre mim,<br>Breno da Silva Nogueira.<br><br>
             Busco mostrar com transparencia minhas habilidades atuais em desenvolvimento seja back ou front-end,
-            também demonstrar capacidade de organização e clareza com um template simples, moderno e com fácil leitura.
+            também demonstrar capacidade de organização e clareza com um template simples, moderno e com fácil leitura.<br>
+            Tento através desse portfólio mostrar brevemente sobre minha história profissional e um pouco sobre minha vida estudantil.
          </p>
       </div >
       <div class = "col-3" >
@@ -56,55 +57,6 @@
       </div>
    </div>
 </section>
-<section  class="hidden-objects content-box content-div"  >
-   <div id="tl-slide">
-      <h3 class="tl-skillstitle">CERTIFICADOS</h3>
-      <div class="row row-cols-2 row-cols-sm-2 row-cols-md-6">
-         <div class="col">
-            <div class="card card-cert">
-               <img src="/images/certificados/cert-c-sharp.png" class="card-img-top" alt="...">
-               <div class="card-body">
-               </div>
-            </div>
-         </div>
-         <div class="col">
-            <div class="card card-cert">
-               <img src="/images/certificados/cert-html-css.png" class="card-img-top" alt="...">
-               <div class="card-body">
-               </div>
-            </div>
-         </div>
-         <div class="col">
-            <div class="card card-cert">
-               <img src="/images/certificados/cert-modelagem.png" class="card-img-top" alt="...">
-               <div class="card-body">
-               </div>
-            </div>
-         </div>
-         <div class="col">
-            <div class="card card-cert">
-               <img src="/images/certificados/cert-oracle-db.png" class="card-img-top" alt="...">
-               <div class="card-body">
-               </div>
-            </div>
-         </div>
-         <div class="col">
-            <div class="card card-cert">
-               <img src="/images/certificados/cert-powebi.png" class="card-img-top" alt="...">
-               <div class="card-body">
-               </div>
-            </div>
-         </div>
-         <div class="col">
-            <div class="card card-cert">
-               <img src="/images/certificados/cert-python-ds.png" class="card-img-top" alt="...">
-               <div class="card-body">
-               </div>
-            </div>
-         </div>
-      </div>
-   </div>
-</section>
 <section class="hidden-objects content-box content-div">
    <h3 class="title-exp">EXPERIÊNCIAS COM DESENVOLVIMENTO</h3>
    <div>
@@ -123,6 +75,25 @@
                   <p class="card-text">LINGUAGENS UTILIZADAS : <br> SQL PL/SQL JS HTML CSS </p>
                   <div class="progress">
                      <div class="progress-bar progress-bar-striped" role="progressbar" aria-label="Default striped example" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         </div>
+         <div class="col inner-card-exp">
+         <div class="row g-0">
+            <div class="col-md-4 logo-exp">
+               <img src="/images/exps-logos/loading.gif" style="margin: 20%;"class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8 dados-exp">
+               <div class="card-body">
+                  <h6 class="card-title">
+                  ?</h5>
+                  <p class="card-text"  style ="margin-top: 25px;">CARGO : ? </p>
+                  <p class="card-text">PERÍODO : ? - ? </p>
+                  <p class="card-text">LINGUAGENS UTILIZADAS :  ? <br> </p>
+                  <div class="progress"  style ="margin-top: 40px;">
+                     <div class="progress-bar progress-bar-striped" role="progressbar" aria-label="Default striped example" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" >0%</div>
                   </div>
                </div>
             </div>
